# gluon

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: config.yaml
src/autogluon_assistant/WebUI/: .dockerignore  .gitignore  Dockerfile  README.md  app.py  constants.py  file_uploader.py  log_processer.py  log_processor.py  pyproject.toml  style.css
src/autogluon_assistant/WebUI/pages/: demo.py  feature.py  nav_bar.py  preview.py  task.py  tutorial.py
src/autogluon_assistant/WebUI/sample_dataset/airline-reviews/: descriptions.txt  test.csv  train.csv
src/autogluon_assistant/WebUI/sample_dataset/bitcoin-price-prediction/: descriptions.txt  test.csv  train.csv
src/autogluon_assistant/WebUI/sample_dataset/boolq/: descriptions.txt  test.csv  train.csv
src/autogluon_assistant/WebUI/sample_dataset/chatgpt-prompt/: descriptions.txt  test.csv  train.csv
src/autogluon_assistant/WebUI/sample_dataset/concrete-strength/: descriptions.txt
src/autogluon_assistant/WebUI/sample_dataset/crab-age/: descriptions.txt
src/autogluon_assistant/WebUI/sample_dataset/detect-ai-generation/: descriptions.txt
src/autogluon_assistant/WebUI/sample_dataset/hotel-reviews/: descriptions.txt
src/autogluon_assistant/WebUI/sample_dataset/jigsaw/: descriptions.txt  train.csv
src/autogluon_assistant/WebUI/sample_dataset/media-campaign-cost/: descriptions.txt
src/autogluon_assistant/WebUI/sample_dataset/mohs-hardness/: descriptions.txt  test.csv
src/autogluon_assistant/WebUI/user/: app.py
src/autogluon_assistant/WebUI/utils/: __init__.py  utils.py
(+82 files in other folders)
